unpackaged/main/default/objects/Account/fields/Account_Flag__c.field-meta.xml
<CustomField>
    <fullName>Account_Flag__c</fullName>
    <description>Is this a target account where Black Diamond would like to build a special relationship?</description>
    <inlineHelpText>Is this a target account where Black Diamond would like to build a special relationship?</inlineHelpText>
    <label>Target Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>