unpackaged/main/default/objects/Account/fields/Account_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Account_Hierarchy__c</fullName>
    <description>The Account Hierarchy ranks how important the client is to Black Diamond (on a scale from 1 to 3, 1 being very important and 3 being not important)</description>
    <label>Account Hierarchy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>