unpackaged/main/default/objects/Account/fields/Account_Number_Auto__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Auto__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Account Number</label>
    <type>AutoNumber</type>
</CustomField>