unpackaged/main/default/objects/Account/fields/Account_Owner_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Phone_Number__c</fullName>
    <description>Account Owner Phone - for Outreach</description>
    <formula>Owner.Phone</formula>
    <inlineHelpText>Account Owner Phone - for Outreach</inlineHelpText>
    <label>Account Owner Phone Number</label>
    <type>Text</type>
</CustomField>