unpackaged/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Relationship type(s) this Account has with Black Diamond.</description>
    <inlineHelpText>Relationship type(s) this Account has with Black Diamond.</inlineHelpText>
    <label>Account Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Dead Account</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>General Contractor</fullName>
            </value>
            <value>
                <fullName>Charter School Mgmnt Co</fullName>
            </value>
            <value>
                <fullName>Land Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>