unpackaged/main/default/objects/Account/fields/Accounting_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Email_Address__c</fullName>
    <label>Accounting Email Address</label>
    <type>Email</type>
</CustomField>