unpackaged/main/default/objects/Account/fields/ACN__c.field-meta.xml
<CustomField>
    <fullName>ACN__c</fullName>
    <label>ACN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>