unpackaged/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates status of BD's relationship with this Account</description>
    <inlineHelpText>Indicate status of Black Diamond's relationship with this Account</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>