unpackaged/main/default/objects/Account/fields/AR_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>AR_Credit_Limit__c</fullName>
    <formula>HYPERLINK("https://app.powerbi.com/Redirect?action=OpenApp&amp;appId=5f4683bd-f789-4092-af31-f18e41760253&amp;ctid=55ce8f48-2d7f-452f-b1ae-e923c41d75d9", "AR Credit Limit Report")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AR Credit Limit</label>
    <type>Text</type>
</CustomField>