unpackaged/main/default/objects/Account/fields/Association__c.field-meta.xml
<CustomField>
    <fullName>Association__c</fullName>
    <description>Affiliated Association, used by MPA for member pricing.</description>
    <inlineHelpText>Affiliated Association, used by MPA for member pricing.</inlineHelpText>
    <label>Association</label>
    <length>30</length>
    <type>Text</type>
</CustomField>