unpackaged/main/default/objects/Account/fields/Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postal_Code__c</fullName>
    <label>OLD Billing Postal/Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>