unpackaged/main/default/objects/Account/fields/Billing_ZIP5__c.field-meta.xml
<CustomField>
    <fullName>Billing_ZIP5__c</fullName>
    <formula>if(isnumber(Left( BillingPostalCode ,5)), value(Left( BillingPostalCode ,5)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing ZIP5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>