unpackaged/main/default/objects/Account/fields/CategoryFootages__c.field-meta.xml
<CustomField>
    <fullName>CategoryFootages__c</fullName>
    <label>Category Footages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>