unpackaged/main/default/objects/Account/fields/City_and_State_Province__c.field-meta.xml
<CustomField>
    <fullName>City_and_State_Province__c</fullName>
    <formula>BillingCity&amp;", "&amp; BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City and State/Province</label>
    <type>Text</type>
</CustomField>