unpackaged/main/default/objects/Account/fields/Competitive_Footages__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Footages__c</fullName>
    <label>Competitive Footages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>