unpackaged/main/default/objects/Account/fields/Cooperative__c.field-meta.xml
<CustomField>
    <fullName>Cooperative__c</fullName>
    <label>Cooperative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cooperatives</valueSetName>
    </valueSet>
</CustomField>