unpackaged/main/default/objects/Account/fields/Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category__c</fullName>
    <description>To be used for NS mapping</description>
    <label>Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
            <value>
                <fullName>Intra-Group</fullName>
            </value>
            <value>
                <fullName>Third Party Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>