unpackaged/main/default/objects/Account/fields/Customer_Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Outstanding_Balance__c</fullName>
    <label>Customer Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>