unpackaged/main/default/objects/Account/fields/Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>Default_Currency__c</fullName>
    <formula>TEXT(CurrencyIsoCode)</formula>
    <label>Default Currency</label>
    <type>Text</type>
</CustomField>