unpackaged/main/default/objects/Account/fields/Deposit_Required__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Required__c</fullName>
    <description>Indicates deposit is required prior to shipping.</description>
    <inlineHelpText>Indicates deposit is required prior to shipping.</inlineHelpText>
    <label>Deposit Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>