unpackaged/main/default/objects/Account/fields/Freight_to_Code__c.field-meta.xml
<CustomField>
    <fullName>Freight_to_Code__c</fullName>
    <label>Freight to Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>