unpackaged/main/default/objects/Account/fields/Freight_to_Name__c.field-meta.xml
<CustomField>
    <fullName>Freight_to_Name__c</fullName>
    <label>Freight to Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>