unpackaged/main/default/objects/Account/fields/IG_IC_Accounting_Contact__c.field-meta.xml
<CustomField>
    <fullName>IG_IC_Accounting_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IG/IC Accounting Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (IG/IC Accounting Contact)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>