unpackaged/main/default/objects/Account/fields/IG_IC_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>IG_IC_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IG/IC Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (IG/IC Billing Contact)</relationshipLabel>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>