unpackaged/main/default/objects/Account/fields/IG_IC_Purchasing_Contact__c.field-meta.xml
<CustomField>
    <fullName>IG_IC_Purchasing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IG/IC Purchasing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (IG/IC Purchasing Contact)</relationshipLabel>
    <relationshipName>Accounts7</relationshipName>
    <type>Lookup</type>
</CustomField>