unpackaged/main/default/objects/Account/fields/Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment__c</fullName>
    <description>Sub-category of Industry. If Other, must also specify Industry Details.</description>
    <inlineHelpText>Sub-category of Industry. If Other, must also specify Industry Details.</inlineHelpText>
    <label>Industry Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetName>Industry_Segment</valueSetName>
    </valueSet>
</CustomField>