unpackaged/main/default/objects/Account/fields/JMU__c.field-meta.xml
<CustomField>
    <fullName>JMU__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>James Madison University piggyback contract</inlineHelpText>
    <label>JMU</label>
    <type>Checkbox</type>
</CustomField>