unpackaged/main/default/objects/Account/fields/KPN__c.field-meta.xml
<CustomField>
    <fullName>KPN__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Member of Keystone Purchasing Network</inlineHelpText>
    <label>KPN</label>
    <type>Checkbox</type>
</CustomField>