unpackaged/main/default/objects/Account/fields/Latest_Contact__c.field-meta.xml
<CustomField>
    <fullName>Latest_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the most recently created Contact related to an Account. Used to populate Primary Contact on an Opportunity.</description>
    <inlineHelpText>Holds the most recently created Contact related to an Account</inlineHelpText>
    <label>Latest Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>