unpackaged/main/default/objects/Account/fields/Lease_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Lease_Customer_Status__c</fullName>
    <inlineHelpText>This field only pertains to whether a lease customer is currently leasing from us or has leased from us in the past. It does not relate to sale customers.</inlineHelpText>
    <label>Lease Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Customer</fullName>
            </value>
            <value>
                <fullName>Terminated Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>