unpackaged/main/default/objects/Account/fields/Master_Buying_Group__c.field-meta.xml
<CustomField>
    <fullName>Master_Buying_Group__c</fullName>
    <label>Master Buying Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>