unpackaged/main/default/objects/Account/fields/MSA__c.field-meta.xml
<CustomField>
    <fullName>MSA__c</fullName>
    <label>MSA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nutrien</fullName>
            </value>
            <value>
                <fullName>Kiewit</fullName>
            </value>
            <value>
                <fullName>Stuard Bird</fullName>
            </value>
            <value>
                <fullName>Graham</fullName>
            </value>
            <value>
                <fullName>Aecon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>