unpackaged/main/default/objects/Account/fields/No_of_Active_Contract_Contracts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Active_Contract_Contracts__c</fullName>
    <label># of Active Contract/Contracts</label>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>