unpackaged/main/default/objects/Account/fields/No_of_Opps_in_PD_or_Beyond__c.field-meta.xml
<CustomField>
    <fullName>No_of_Opps_in_PD_or_Beyond__c</fullName>
    <label># of Opps in PD or Beyond</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Proposal Delivered, Contract Approved, Contract Sent, Won, WIP, Closed Won, Awarded, Completed., Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>