unpackaged/main/default/objects/Account/fields/NS_Account_Primary_Currency_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Account_Primary_Currency_ID__c</fullName>
    <formula>Case(BillingCountry ,
 'Canada','1',
 'United States','2',
 'Australia','5',
 '0'
)</formula>
    <label>NS Account Primary Currency ID</label>
    <type>Text</type>
</CustomField>