unpackaged/main/default/objects/Account/fields/NS_Billing_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Billing_Address_ID__c</fullName>
    <externalId>true</externalId>
    <label>NS Billing Address ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>