unpackaged/main/default/objects/Account/fields/NS_Customer_Category_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Customer_Category_ID__c</fullName>
    <formula>Case( Customer_Category__c ,
'External','4',
'Intercompany','2',
'Intra-Group','6',
'Third Party Partnership','6',
'0'
)</formula>
    <label>NS Customer Category ID</label>
    <type>Text</type>
</CustomField>