unpackaged/main/default/objects/Account/fields/NS_Customer_Credit_Hold_Status__c.field-meta.xml
<CustomField>
    <fullName>NS_Customer_Credit_Hold_Status__c</fullName>
    <label>NS Customer Credit Hold Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>