unpackaged/main/default/objects/Account/fields/NS_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Customer_ID__c</fullName>
    <label>NS Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>