unpackaged/main/default/objects/Account/fields/NS_Industry_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Industry_ID__c</fullName>
    <formula>Case(  Industry_Segment__c ,
'Transportation and Warehousing','1',
'Utilities','2',
'Commercial/Industrial','3',
'Residential','4',
'Discretionary (excl Travel Mgmt)','5',
'Staples','6',
'Private','7',
'Public','8',
'Clean and Renewable','9',
'Oil and Gas Downstream (Refineries/Petrochemicals)','10',
'Oil and Gas Midstream (Infrastructure, Pipelines, Facilities)','11',
'Oil and Gas Upstream - Completions','12',
'Oil and Gas Upstream - Drilling','13',
'Oil and Gas Upstream - Other','14',
'Defense (Naval Bases, Air Force Bases, Army Bases)','15',
'Indigenous','16',
'Other Government (excl Education, Healthcare, Indigenous)','17',
'Healthcare, Emergency Response and Social Services','18',
'Coal','20',
'Metals (Gold, Copper, Silver, Iron)','21',
'Non-Metals (excl Coal)','22',
'Other Mining','23',
'Agriculture (incl Forestry)','24',
'Manufacturing','25',
'Other','26',
'Travel Management','27',
'Information and Professional Services (excl Travel Mgmt)','28',
'Religious Organizations','29',
'19'
)</formula>
    <label>NS Industry ID</label>
    <type>Text</type>
</CustomField>