unpackaged/main/default/objects/Account/fields/NS_MSA_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_MSA_ID__c</fullName>
    <formula>CASE( TEXT(MSA__c),
'Graham','1',
'Aecon','2',
'Nutrien','3',
'Kiewit','4',
'Stuard Bird','5',
null
)</formula>
    <label>NS MSA ID</label>
    <type>Text</type>
</CustomField>