unpackaged/main/default/objects/Account/fields/Number_of_Active_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Locations__c</fullName>
    <description>Rollup count of MPA locations active on this account</description>
    <inlineHelpText>Rollup count of MPA locations active on this account</inlineHelpText>
    <label># of Active Locations</label>
    <summaryFilterItems>
        <field>Location__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Location__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>