unpackaged/main/default/objects/Account/fields/Number_of_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contracts__c</fullName>
    <description>Count of MPA Disaster Contracts</description>
    <inlineHelpText>Count of MPA Disaster Contracts</inlineHelpText>
    <label># of Disaster Contracts</label>
    <summaryForeignKey>Disaster_Agreement__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>