unpackaged/main/default/objects/Account/fields/Number_of_Opportunties__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Opportunties__c</fullName>
    <description>Count of Opportunities for this Account</description>
    <inlineHelpText>Count of Opportunities for this Account</inlineHelpText>
    <label># of Opportunties</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>