unpackaged/main/default/objects/Account/fields/Number_of_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Won_Opportunities__c</fullName>
    <description>Count of Closed-Won Opportunities for this Account</description>
    <inlineHelpText>Count of Closed-Won Opportunities for this Account</inlineHelpText>
    <label># of Won Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>