unpackaged/main/default/objects/Account/fields/Numeber_of_CAN_WFS_Opps__c.field-meta.xml
<CustomField>
    <fullName>Numeber_of_CAN_WFS_Opps__c</fullName>
    <label># of CAN WFS Opps</label>
    <summaryFilterItems>
        <field>Opportunity.Division_Region__c</field>
        <operation>equals</operation>
        <value>Camps Canada, ES Canada</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>