unpackaged/main/default/objects/Account/fields/of_US_WFS_Opps__c.field-meta.xml
<CustomField>
    <fullName>of_US_WFS_Opps__c</fullName>
    <label># of US WFS Opps</label>
    <summaryFilterItems>
        <field>Opportunity.Division_Region__c</field>
        <operation>equals</operation>
        <value>Camps US, ES US</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>