unpackaged/main/default/objects/Account/fields/Original_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Lead_Source__c</fullName>
    <label>Original Lead Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>