unpackaged/main/default/objects/Account/fields/Original_Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Original_Lead_Source_Detail__c</fullName>
    <description>Mapped from Lead during conversion.</description>
    <inlineHelpText>Details about the origin of this Account.</inlineHelpText>
    <label>Lead Source Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>