unpackaged/main/default/objects/Account/fields/Partnership_Accounting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Accounting_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partnership Accounting Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Partnership Accounting Contact)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>