unpackaged/main/default/objects/Account/fields/Partnership_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partnership Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Partnership Billing Contact)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>