unpackaged/main/default/objects/Account/fields/Partnership_Purchasing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Purchasing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partnership Purchasing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Partnership Purchasing Contact)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>